--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
