--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
+    "react-dom": "^17.0.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-server": "^3.11.3"
   },
   "dependencies": {
+    "@primer/octicons": "^17.0.0",
+    "@primer/octicons-react": "^17.0.0",
     "core-js": "^3.21.1",
     "regenerator-runtime": "^0.13.9"
   }
